# replication

./: .gitignore  README.md  pyproject.toml
data/processed/database/: 197x.csv  articles.db
data/processed/replication_analysis_coding/: Hypotheses by decade (rater 1).xlsx  Hypotheses by decade (rater 2).xlsx  Replication analysis coding.xlsx
data/raw/s2_2021_06_01/: .gitattributes  articles_traumatic_brain_injury.md
data/raw/web_of_science_2021_06_21/: 10001_10500.txt  1001_1500.txt  10501_11000.txt  11001_11500.txt  11501_12000.txt  12001_12500.txt  12501_13000.txt  13001_13500.txt  13501_14000.txt  14001_14500.txt  14501_15000.txt  15001_15500.txt  1501_2000.txt  15501_16000.txt  16001_16500.txt  16501_17000.txt  17001_17500.txt  17501_18000.txt  18001_18500.txt  18501_19000.txt  19001_19500.txt  19501_20000.txt  1_500.txt  20001_20500.txt  2001_2500.txt  20501_21000.txt  21001_21500.txt  21501_22000.txt  22001_22500.txt  22501_23000.txt  23001_23500.txt  23501_24000.txt  24001_24500.txt  24501_25000.txt  25001_25500.txt  2501_3000.txt  25501_26000.txt  26001_26500.txt  26501_27000.txt  27001_27484.txt  (+15 more)
data/raw/web_of_science_2022_02_06/: 10,001_10,500.txt  10,501_11,000.txt  1001_1500.txt  11,001_11,500.txt  11,501_12,000.txt  12,001_12,500.txt  12,501_13,000.txt  13,001_13,500.txt  13,501_14,000.txt  14,001_14,500.txt  14,501_15,000.txt  15,001_15,500.txt  15,501_16,000.txt  1501_2000.txt  16,001_16,500.txt  16,501_17,000.txt  17,001_17,500.txt  17,501_18,000.txt  (+98 more)
docs/: WoS Export screenshots.docx  wos_columns.txt
replication/: main.py  s2.py  wosmap.py
