[tool.poetry]
name = "replication"
version = "0.1.0"
description = ""
authors = ["Jason A. Staph <jstaph@staph.us>"]

[tool.poetry.dependencies]
python = "^3.9"
networkx = "^2.6.1"
wosfile = "^0.5"
metaknowledge = "^3.4.1"
datasette = "^0.58.1"
sqlite-utils = "^3.12"

[tool.poetry.dev-dependencies]
ipython = "^7.25.0"
black = "^21.7b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
